<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Morse Listen and Learn</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_accuracy">Accuracy : </string>
    <string name="view_attempts">Attempts : </string>
    <string name="view_selection">Press Selection</string>
    <string name="button_reset">Reset</string>
    <string name="button_repeat">Repeat</string>
    <string name="seek_wpm">WPM Speed</string>
    <string name="button_farns">Farnsworth Spacing</string>
    <string name="button_null">#</string>
    <string name="button_replay">REPLAY</string>
    <string name="button_hints">_HINT_</string>
    <string name="view_start_character">W</string>

</resources>
