<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/viewCharPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonHint"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/buttonHint"
        android:layout_below="@+id/textView2"
        android:gravity="top|center_vertical|center_horizontal"
        android:text="@string/view_start_character"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="true"

        android:textSize="250sp"
        android:layout_above="@+id/textView" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"
        android:layout_above="@+id/linearLayout">

        <Button

            android:id="@+id/buttonGuess1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"

            android:gravity="center_vertical|center_horizontal"
            android:onClick="onClickGuess"
            android:text="New Button"
            android:textAlignment="center"
            android:layout_weight="1"
            android:background="@drawable/button_custom"/>

        <Button

            android:id="@+id/buttonGuess2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onClickGuess"
            android:text="New Button"
            android:textAlignment="center"
            android:background="@drawable/button_custom"/>

        <Button
            android:id="@+id/buttonGuess3"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onClickGuess"
            android:text="New Button"
            android:textAlignment="center"
            android:background="@drawable/button_custom"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonGuess4"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onClickGuess"
            android:text="New Button"
            android:textAlignment="center"
            android:layout_weight="1"
            android:background="@drawable/button_custom"/>

        <Button
            android:id="@+id/buttonGuess5"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onClickGuess"
            android:text="New Button"
            android:textAlignment="center"
            android:background="@drawable/button_custom"/>

        <Button
            android:id="@+id/buttonGuess6"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:onClick="onClickGuess"
            android:text="New Button"
            android:textAlignment="center"
            android:background="@drawable/button_custom"/>


    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/view_accuracy"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textAccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:text="Accuracy"
        android:textAlignment="textEnd"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:text="@string/view_attempts"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textAttempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAccuracy"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:text="Attempts"
        android:textAlignment="textEnd"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonReplay"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:text="@string/button_replay"
        android:textColor="#ff009e00"
        android:textSize="12sp"
        />

    <Spinner
        android:id="@+id/spinnerLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textAttempts"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textAccuracy"
        android:layout_toRightOf="@+id/textAccuracy"
        android:gravity="right"
        android:spinnerMode="dropdown"
        android:textAlignment="viewEnd" />


    <Button
        android:id="@+id/buttonHint"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/spinnerLevel"
        android:layout_alignRight="@+id/spinnerLevel"
        android:layout_below="@+id/textAttempts"

        android:text="@string/button_hints"
        android:textColor="#ff3032e9"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_selection"

        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>